Fri Jun  3 15:26:42 CEST 2011
	Adding MHD_CONNECTION_INFO_DAEMON to obtain MHD_Daemon
	responsible for a given connection. -CG

Wed May 25 14:23:20 CEST 2011
	Trying to fix stutter problem on timeout described by
	David Myers on the mailinglist (5/10/2011). -CG

Fri May 20 22:11:55 CEST 2011
	Fixed bug in testcase setup code causing crashes in
	tls_session_timeout_test on some systems.
	Releasing libmicrohttpd 0.9.11. -CG

Fri May 20 19:34:59 CEST 2011
	Fixed bug in parsing multipart/form-data with post processor where
	the code failed to add a 0-terminator in the correct position. -PP

Thu May 12 14:40:46 CEST 2011
	Fixed bug where if multiple HTTP request messages are piped in at once,
	microhttpd would call the handler with the wrong upload_data_size. -HZM

Thu May 12 14:40:08 CEST 2011
	Documented possible issue with off_t being sometimes
	32-bit and sometimes 64-bit depending on #includes. -CG

Sun May  8 21:52:47 CEST 2011
	Allow MHD_SIZE_UNKNOWN to be used in conjunction with
	MHD_create_response_from_fd (fixing #1679). -TG

Wed Apr 27 16:11:18 CEST 2011
	Releasing libmicrohttpd 0.9.10. -CG

Fri Apr  8 11:40:35 CEST 2011
	Workaround for cygwin poll brokenness. -TS

Sun Apr  3 13:56:52 CEST 2011
	Fixing compile error on OS X. -CG

Wed Mar 30 12:56:09 CEST 2011
	Initialize tv_usec in MHD_USE_THREAD_PER_CONNECTION with select
	and per-connection timeout. -CG

Tue Mar 29 14:15:13 CEST 2011
	Releasing libmicrohttpd 0.9.9. -CG

Tue Mar 29 14:11:19 CEST 2011
	Fixed call to mmap for memory pool, extended testcase to cover
	POLL. -CG

Wed Mar 23 23:24:25 CET 2011
	Do not use POLLIN when we only care about POLLHUP (significantly
	improves performance when using MHD_USE_THREAD_PER_CONNECTION
	in combination with MHD_USE_POLL). -ES

Sun Mar 20 09:16:53 CET 2011
	Fixing race when using MHD_USE_THREAD_PER_CONNECTION in combination
	with MHD_USE_POLL. -CG

Fri Mar 18 13:23:47 CET 2011
	Removing MSG_DONTWAIT which should not be needed and was presumably